space in background style.css

--- a/style.css
+++ b/style.css
@@ -501,47 +501,6 @@ body {
   color: var(--color-white);
 }
 
-.background-about {
-  width: 50%;
-  height: 100vh;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.img-wrapper {
-  height: 100%;
-  width: 100%;
-
-  position: relative;
-}
-
-.img-wrapper::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  height: 100%;
-  width: 100%;
-
-  background:
-    linear-gradient(.25turn, transparent 30%, var(--color-black)),
-    linear-gradient(.5turn, transparent 30%, var(--color-black)),
-    linear-gradient(1turn, transparent 65%, var(--color-black));
-
-}
-
-.img-wrapper img {
-  height: 100%;
-  width: 100%;
-
-  object-fit: cover;
-}
-
-
 .section-subtitle h2 p {
   display: inline-block;
   font-size: calc(1.4vw + 1.2rem);
@@ -573,7 +532,7 @@ body {
 
 .box-about h4 {
   margin: 1rem 3rem;
-  font-size: calc(.8vw + .5rem);
+  font-size: calc(2vw + .5rem);
 }
 
 .box-about h4 p {
@@ -617,9 +576,6 @@ body {
 
 /* sm */
 @media (max-width: 375px) {
-  .box-about {
-    padding: 1rem
-  }
 
   .section-subtitle p {
     font-size: 2rem;
