--- a/style.css
+++ b/style.css
@@ -630,7 +630,7 @@ body {
 
 /* Final da sobre */
 
-#projects {
+/*#projects {
   height: auto;
   width: 100%;
   background: var(--color-black);
@@ -659,7 +659,7 @@ body {
   margin-top: 2rem;
 } */
 
-.container-projects {
+/*.container-projects {
   height: 100%;
   width: 100%;
 
@@ -684,17 +684,17 @@ body {
   padding: 0px 20px;
 }
 
-.card-project {
+/*.card-project {
   /* width: 320px; */
   /* height: 450px; */
 
-  height: 100%;
+  /*height: 100%;
   width: 100%;
 
   padding: 30px 20px 20px;
   /* margin: 0px 10px; */
 
-  position: relative;
+  /*position: relative;
   background: var(--color-white);
 
   display: flex;
@@ -707,7 +707,7 @@ body {
 
 }
 
-.card-project::after {
+/*.card-project::after {
   content: "";
   position: absolute;
   top: 0;
@@ -732,7 +732,7 @@ body {
   z-index: 1;
 } */
 
-.image-project {
+/*.image-project {
   max-height: 240px;
   max-width: 250px;
 
@@ -781,6 +781,7 @@ body {
   font-size: 1.1rem;
   margin: 0rem .75rem;
 }
+*/
 
 .cta-project {
   width: 200px;
