--- a/style.css
+++ b/style.css
@@ -627,162 +627,6 @@ body {
   }
 }
 
-
-/* Final da sobre */
-
-/*#projects {
-  height: auto;
-  width: 100%;
-  background: var(--color-black);
-
-  display: flex;
-  flex-direction: column;
-}
-
-.projects-title h2 {
-  margin-top: 60px;
-  padding: 1rem;
-
-  font-size: 3rem;
-  color: var(--color-white);
-}
-
-/* .wrapper-projects {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  flex-direction: row;
-
-  height: 500px;
-
-  margin-top: 2rem;
-} */
-
-/*.container-projects {
-  height: 100%;
-  width: 100%;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper {
-  height: 500px;
-  width: 100%;
-  max-width: 1020px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-
-  height: 500px;
-
-  margin-top: 2rem;
-  padding: 0px 20px;
-}
-
-/*.card-project {
-  /* width: 320px; */
-  /* height: 450px; */
-
-  /*height: 100%;
-  width: 100%;
-
-  padding: 30px 20px 20px;
-  /* margin: 0px 10px; */
-
-  /*position: relative;
-  background: var(--color-white);
-
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-
-  border-radius: 20px;
-
-  z-index: 1;
-
-}
-
-/*.card-project::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  height: 40%;
-  width: 100%;
-
-  background: var(--color-purple);
-  border-radius: 20px 20px 0px 0px;
-
-  z-index: -1;
-}
-
-/* .content-project {
-  height: 100%;
-  width: 100%;
-
-  display: flex;
-  flex-direction: column;
-
-  z-index: 1;
-} */
-
-/*.image-project {
-  max-height: 240px;
-  max-width: 250px;
-
-  height: 100%;
-  width: 100%;
-
-  position: relative;
-  overflow: hidden;
-  border-radius: 30px;
-
-  border: 4px solid var(--color-purple);
-
-  margin: 0 auto;
-}
-
-.image-project a img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 30px;
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  border: 2px solid var(--color-white);
-
-  transition: transform .3s ease-out;
-  cursor: pointer;
-}
-
-.image-project img:hover {
-  transform: scale(1.1);
-}
-
-.card-project span {
-  color: var(--color-black);
-  font-weight: bold;
-  font-size: 1.7rem;
-
-  margin: .75rem auto .5rem auto;
-}
-
-.card-project p {
-  color: #3d3d4b;
-  font-weight: bold;
-  font-size: 1.1rem;
-  margin: 0rem .75rem;
-}
-*/
-
 .cta-project {
   width: 200px;
   margin: auto auto 15px auto;
@@ -868,6 +712,56 @@ body {
 }
 
 /* Final do projetc */
+
+/* Style Form Contact */
+section.formulario{
+  padding: 80px 4%;
+}    
+
+form{
+  max-width: 500px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: colum;
+  gap: 10px;
+  margin-top: 40px;
+}  
+
+form input, form textarea{
+  width: 100%
+  background-color: #242424;
+  border: 0;
+  outline: 0;
+  padding: 20px 15px;
+  border-radius: 15px;
+  color: #fff
+  font-size: 18px;
+}  
+
+form textarea{
+  resize: none;
+  max-height: 200px;
+}
+
+form .btn-send{
+  margin-top: 20px;
+  text-align: center;
+}  
+
+ form.btn-send input{
+  width:120px
+  background-color: #FFFFFF;
+  color:  #000;
+  font-weight: 700;
+  cursor: pointer;
+   transition: .2s
+}  
+
+button:hover,form .btn-send input:hover{
+  box-shadow: 0px 0px 8px #00ff08;
+  transform: scale(1.05);
+}  
 
 #contacts {
   display: flex;
