--- a/style.css
+++ b/style.css
@@ -629,54 +629,93 @@ body {
 /* Final do projetc */
 
 /* Style Form Contact */
-section.formulario{
-  padding: 80px 4%;
-}    
-
-form{
-  max-width: 500px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  flex-direction: colum;
-  gap: 10px;
-  margin-top: 40px;
-}  
-
-form input, form textarea{
-  width: 100%
-  background-color: #242424;
-  border: 0;
-  outline: 0;
-  padding: 20px 15px;
-  border-radius: 15px;
-  color: #fff
-  font-size: 18px;
-}  
-
-form textarea{
-  resize: none;
-  max-height: 200px;
+body{
+    width: 100%;
+    height: 100vh;
+    background-image: url(image/fundo.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-form .btn-send{
-  margin-top: 20px;
-  text-align: center;
-}  
+.container{
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 6%;
+}
 
- form.btn-send input{
-  width:120px
-  background-color: #FFFFFF;
-  color:  #000;
-  font-weight: 700;
-  cursor: pointer;
-   transition: .2s
-}  
+form{
+    background: #fff;
+    max-width: 500px;
+    height: 450px;
+    padding: 40px;
+    border-radius: 20px;
+}
 
-button:hover,form .btn-send input:hover{
-  box-shadow: 0px 0px 8px #00ff08;
-  transform: scale(1.05);
-}  
+form h1{
+    text-align: center;
+    margin-bottom: 10px;
+    color: #2D5966;
+    font-size: 22pt;
+}
+
+form p{
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+form .input-single{
+    position: relative;
+    margin: 30px 0;
+}
+
+form .input-single label{
+    position: absolute;
+    left: 0;
+    bottom: 5px;
+    cursor: text;
+    transition: all 0.5s;
+    color: #808080;
+}
+
+form .input-single .input{
+    width: 100%;
+    border: 0;
+    border-bottom: 2px solid #808080;
+    padding: 5px;
+    outline: 0;
+    font-size: 16px;
+}
+
+form .input-single .input:focus{
+    border-bottom: 2px solid #2D5966;
+}
+
+form .input-single .input:focus ~ label,
+form .input-single .input:valid ~ label{
+    transform: translateY(-20px);
+    font-size: 12px;
+    color: #2D5966;
+}
+
+.btn{
+    width: 100%;
+    text-align: center;
+}
+
+form input[type=submit]{
+    padding: 10px 40px;
+    border: 0;
+    border-radius: 10px;
+    background-color: #2D5966;
+    color: #fff;
+    font-size: 14pt;
+    cursor: pointer;
+}
+
 
 #contacts {
   display: flex;
