--- a/style.css
+++ b/style.css
@@ -543,6 +543,13 @@ span{
   font-size: 18px;
   margin-bottom: 45px;
 }  
+
+.about-text h5 p{
+  display: inline;
+  padding: 2px 4px;
+
+  color: var(--color-blue);
+} 
 /* End About-new */
 
 
