--- a/style.css
+++ b/style.css
@@ -593,7 +593,7 @@ form{
   gap: 10px;
 }
 
-.forms input{
+.forms input, textarea{
   width: 100%;
   background-color: #242424;
   border: 0;
@@ -603,6 +603,7 @@ form{
   color: #fff;
   font-size: 18px;
 }  
+
 
 
 
