--- a/style.css
+++ b/style.css
@@ -494,14 +494,21 @@ body {
 
 /* Start About-new */
 .about-new{
-  width: 100%
+  width: 100%;
   padding: 78px 0px;
   background: var(--color-black);
 }  
 
-.about img{
+.about-new img{
   height: auto;
-  width: 420;
+  width: 50%;
+  max-width: 100%;
+
+  border: 1px solid black;
+  border-radius: 20px;
+
+  box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5);
+  
 }  
 
 .about-text{
@@ -585,12 +592,24 @@ span{
 
 
 form{
-  max-width: 700px;
+  max-width: 500px;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   flex-direction: column;
   gap: 10px;
+  margin-top: 40px;
+}
+
+.forms h2{
+  text-align: center;
+  font-size: 80px;
+  color:#FFFFFF;
+  margin: 0;
+}
+
+  .forms h2 span{
+    color: #101093;
 }
 
 .forms input, textarea{
@@ -603,6 +622,29 @@ form{
   color: #fff;
   font-size: 18px;
 }  
+
+form textarea{
+    resize: none;
+} 
+
+form .btn-send{
+  margin-top: 20px;
+  text-align: center;
+}
+
+form .btn-send input{
+  width: 120px;
+  background-color: #fff;
+  color:#000;
+  font-weight: 700;
+  cursor: pointer;
+
+}
+
+.btn-send input:hover{
+    transition: all .3s ease;
+    filter: brightness(.8);
+}
 
 
 
@@ -669,10 +711,13 @@ form{
 .contact-info span {
   font-size: 1.2rem;
   font-weight: bold;
+  color:#fff
 }
 
 .contact-info p {
   margin: .25rem 0rem;
+  
+
 }
 
 .contact-info a {
