responsive about-for pc

--- a/style.css
+++ b/style.css
@@ -750,6 +750,8 @@ form input, textarea{
 
 .about-new {
   padding: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .main {
@@ -763,23 +765,27 @@ form input, textarea{
   flex-direction: column;
   align-items: center;
   text-align: center;
+  width: 100%;
 }
 
 .profile-image {
   width: 100%;
-  max-width: 600px; /* Ajuste o tamanho máximo da imagem conforme necessário */
+  max-width: 100%; /* Ajuste o tamanho máximo da imagem conforme necessário */
   height: auto;
 }
 
 .text {
-  max-width: 800px; /* Ajuste a largura máxima do texto conforme necessário */
   margin-top: 20px;
+  width: 100%; /* Define a largura do texto */
+  
 }
 
 
 /* End section about us */
 
 /* Start media for forms */
+
+
 /* Estilo para dispositivos menores, como smartphones */
 @media (max-width: 767px) {
   #forms .interface {
@@ -834,6 +840,8 @@ form input, textarea{
 }
 
 /* End media for forms */
+
+
 
 
 
