change letter gig for small and links image

--- a/style.css
+++ b/style.css
@@ -409,7 +409,7 @@ body {
   position: relative;
   flex-direction: column;
 
-  background-image: url(./img/img1.jpg);
+  background-image: url(./assets/img/picture-top-background.jpg);
   background-size: cover;
   background-position: top center;
 
